--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -864,15 +864,29 @@ body{
 
 .noidung222 {
     display: none;
+    flex-direction: column;
+    /* animation: fadeOutToTop 0.5s ease-out forwards; */
 }
 
+
+
 .noidung222 a {
+    
     padding-left: 47px;
     /* background-color: rgb(190, 0, 0); */
 }
 
-/* .noidung222 a:hover {
-    font-weight: 700;
+
+/* .submenu:hover .noidung222{
+    display: flex;
+    animation: fadeInFromTop 0.5s ease-out forwards;
+}
+.bx-grid-alt{
+    animation: service_slide_left 0.3s ease-in-out forwards;
+}
+.submenu:hover .bx-grid-alt{
+    animation: service_slide_right 0.3s ease-in-out forwards;
+    margin-left: 15px;
 } */
 /* ===================================== */
 .footer__last__select {
@@ -1025,7 +1039,7 @@ body{
     /* background-color: green; */
     width: 100%;
     max-width: 500px;
-    height: 100%;
+    /* height: 100%; */
     max-height: 500px;
     display: flex;
     align-items: center;
@@ -1065,7 +1079,7 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 700;
     text-shadow: 0 0 10px black;
     line-height: 1.5;
     
@@ -1079,6 +1093,7 @@ body{
     height: 80px;
     width: 90%;
     max-width: 400px;
+    font-size: 14px;
 }
 .title__input__box{
     height: 25px;
