--- a/css/header.css
+++ b/css/header.css
@@ -393,10 +393,13 @@
 }
 
 .content__inner:hover {
-    background-color: rgba(110, 110, 110, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
     /* font-weight: 700; */
 }
 
+b.content__inner:hover{
+    background-color: rgba(255, 255, 255, 0.1);
+}
 
 
 .logo {
