--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -141,21 +141,40 @@
     100% {
         opacity: 1;
         transform: translateY(0);
-        height: 244px;
+        height: 240px;
     }
 }
 @keyframes fadeOutToTop {
     0% {
         opacity: 1;
         transform: translateY(0);
-        height: 244px;
+        height: 240px;
+    }
+    20% {
+        opacity: 0.05;
     }
     30% {
-        opacity: 0.0;
+        opacity: 0;
     }
     100% {
         opacity: 0;
         transform: translateY(-20px);
         height: 0px;
+    }
+}
+@keyframes change_bgr {
+    0% {
+        background-color: transparent;
+    }
+    100% {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+}
+@keyframes re_bgr {
+    0% {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        background-color: transparent;
     }
 }
