--- a/navigation_css/train.css
+++ b/navigation_css/train.css
@@ -55,7 +55,8 @@ h1,p{
     flex-basis: calc(27% - 30px); /* Chiếm 50% chiều rộng của container trừ đi khoảng cách */
     margin-bottom: 20px;
     display: inline-block;
-    max-width: 45vw;
+    max-width: 250px;
+    min-width: 250px;
     padding: 12px 12px;
     margin-left: 4px;
     margin-right: 4px;
@@ -81,10 +82,10 @@ h1,p{
 } */
 .container__train__coach__img__items img {
     width: 100%;
-    max-width: 142px; /* Chiều rộng tối đa trong container của mình */
+    max-width: 200px; /* Chiều rộng tối đa trong container của mình */
     border: 2px solid #b1b1b1;
     border-radius: 4px;
-    min-width: 120px;
+    min-width: 200px;
     border: 2px solid #888888;
     border-radius: 2px;
     object-fit: cover;
@@ -193,7 +194,9 @@ h1,p{
 }
 .container__train__yoga__img__items {
     display: inline-block;
-    max-width: 45vw;
+    /* max-width: 45vw; */
+    max-width: 250px;
+    min-width: 200px;
     padding: 12px 12px;
     margin-left: 4px;
     margin-right: 4px;
