--- a/navigation_css/login.css
+++ b/navigation_css/login.css
@@ -1,23 +1,52 @@
-.modal__body{
-    width: 80vh;
+.modal{
+    position: fixed;
+    top: 68px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.modal__body{
+    position: relative;
+    /* width: 100%; */
+    z-index: 10;
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #aaaaaab9;
 }
 
 
-.login-box {
-    position: absolute;
+.modal__body__box {
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     width: 400px;
     padding: 40px;
-    transform: translate(-50%, -55%);
+    /* transform: translate(-50%, -55%); */
     background: rgba(0, 0, 0, .9);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
 }
 
-.login-box p:first-child {
+.register-cart{
+    /* top: calc(100vh - 50% + 40px); */
+}
+
+.modal__body__box p:first-child {
     margin: 0 0 30px;
     padding: 0;
     color: #fff;
@@ -27,11 +56,11 @@
     letter-spacing: 1px;
 }
 
-.login-box .user-box {
+.modal__body__box .user-box {
     position: relative;
 }
 
-.login-box .user-box input {
+.modal__body__box .user-box input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -43,9 +72,9 @@
     background: transparent;
 }
 
-.login-box .user-box label {
+.modal__body__box .user-box label {
     position: absolute;
-    top: 0;
+    top: -7px;
     left: 0;
     padding: 10px 0;
     font-size: 16px;
@@ -54,15 +83,15 @@
     transition: .5s;
 }
 
-.login-box .user-box input:focus~label,
-.login-box .user-box input:valid~label {
+.modal__body__box .user-box input:focus~label,
+.modal__body__box .user-box input:valid~label {
     top: -20px;
     left: 0;
     color: #fff;
     font-size: 12px;
 }
 
-.login-box form button {
+.modal__body__box form button {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -79,18 +108,18 @@
     background-color: transparent;
 }
 
-.login-box button:hover {
+.modal__body__box button:hover {
     background: #fff;
     color: #272727;
     border-radius: 5px;
 }
 
-.login-box button span {
+.modal__body__box button span {
     position: absolute;
     display: block;
 }
 
-.login-box button span:nth-child(1) {
+.modal__body__box button span:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
@@ -110,7 +139,7 @@
     }
 }
 
-.login-box button span:nth-child(2) {
+.modal__body__box button span:nth-child(2) {
     top: -100%;
     right: 0;
     width: 2px;
@@ -131,7 +160,7 @@
     }
 }
 
-.login-box button span:nth-child(3) {
+.modal__body__box button span:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -152,7 +181,7 @@
     }
 }
 
-.login-box button span:nth-child(4) {
+.modal__body__box button span:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
@@ -173,18 +202,136 @@
     }
 }
 
-.login-box p:last-child {
+.modal__body__box p:last-child {
     color: #aaa;
     font-size: 14px;
 }
 
-.login-box a.a2 {
+.modal__body__box span.a2 {
     color: #fff;
     text-decoration: none;
 }
 
-.login-box a.a2:hover {
+.modal__body__box span.a2:hover {
     background: transparent;
     color: #aaa;
     border-radius: 5px;
 }
+
+
+/* gioitinh */
+.box_wrap{
+    display: flex;
+    margin-bottom: 12px;
+}
+
+
+.radio-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 300px;
+    color: white;
+  }
+.radio-container .tyoe_package{
+    margin-bottom: 12px;
+    font-size: 18px;
+}  
+  .radio-wrapper {
+    margin-bottom: 12px;
+  }
+  
+  .radio-button {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .radio-button:hover {
+    transform: translateY(-2px);
+  }
+  
+  .radio-button input[type="radio"] {
+    display: none;
+  }
+  
+  .radio-checkmark {
+    display: inline-block;
+    position: relative;
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+    border: 2px solid #333;
+    border-radius: 50%;
+  }
+  
+  .radio-checkmark:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #333;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .radio-button input[type="radio"]:checked ~ .radio-checkmark:before {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .radio-label {
+    font-size: 16px;
+    font-weight: 600;
+  }
+  
+  /* typegois */
+  .radio-inputs {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 0.5rem;
+    background-color: #030303;
+    box-sizing: border-box;
+    box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+    padding: 0.25rem;
+    width: 100%;
+    font-size: 14px;
+  }
+  
+  .radio-inputs .radio {
+    flex: 1 1 auto;
+    text-align: center;
+  }
+  
+  .radio-inputs .radio input {
+    display: none;
+  }
+  
+  .radio-inputs .radio .name {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    border: none;
+    padding: .5rem 0;
+    color: rgba(51, 65, 85, 1);
+    transition: all .15s ease-in-out;
+    font-size: 16px;
+    color: #666;
+  }
+  
+  .radio-inputs .radio input:checked + .name {
+    background-color: #e8e8e8;
+    font-weight: 600;
+  }
+
+  #pt-options{
+    width: 100%;
+    margin-top: 8px;
+    padding: 6px 8px;
+  }
