--- a/navigation_css/login.css
+++ b/navigation_css/login.css
@@ -1,3 +1,7 @@
+input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+
 .modal{
     position: fixed;
     top: 68px;
@@ -71,6 +75,16 @@
     outline: none;
     background: transparent;
 }
+#actived-label{
+    position: absolute;
+    top: -20px;
+    left: 0;
+    padding: 10px 0;
+    font-size: 12px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
 
 .modal__body__box .user-box label {
     position: absolute;
@@ -82,6 +96,7 @@
     pointer-events: none;
     transition: .5s;
 }
+
 
 .modal__body__box .user-box input:focus~label,
 .modal__body__box .user-box input:valid~label {
@@ -330,7 +345,7 @@
     font-weight: 600;
   }
 
-  #pt-options{
+  #pt-select{
     width: 100%;
     margin-top: 8px;
     padding: 6px 8px;
