--- a/navigation_css/toast.css
+++ b/navigation_css/toast.css
@@ -1,7 +1,6 @@
-
 /* toast */
 
-.btn{
+.btn {
     display: inline-block;
     text-decoration: none;
     background-color: transparent;
@@ -15,38 +14,46 @@
     transition: opacity .2s ease;
     min-width: 120px;
 }
-.btn:hover{
+
+.btn:hover {
     opacity: 0.8;
 }
-.btn + .btn{
+
+.btn+.btn {
     margin-left: 16px;
 }
-.btn--sucess{
+
+.btn--sucess {
     background-color: #83bc4b;
 }
-.btn--warning{
+
+.btn--warning {
     background-color: #f4ba3f;
 }
-.btn--danger{
+
+.btn--danger {
     background-color: #ed6c4a;
 }
-.btn--disabel{
+
+.btn--disabel {
     opacity: 0.5 !important;
     cursor: default;
 }
 
-#toast{
+#toast {
     position: fixed;
     top: 72px;
-    right: 8px;   
-    z-index: 99;  /* cho số cao cao để tránh bị đè lên những thằng khác*/
+    right: 8px;
+    z-index: 99;
+    /* cho số cao cao để tránh bị đè lên những thằng khác*/
 }
-.toast{
+
+.toast {
     display: flex;
     align-items: center;
     border-radius: 2px;
     border-left: 4px solid;
-    box-shadow: 0 5px 8px rgba(0,0,0,0.08);
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
     min-width: 320px;
     max-width: 340px;
     line-height: 1.5;
@@ -54,66 +61,79 @@
     background-color: #fff;
 }
 
-@keyframes slideInleft{
-    from{
+@keyframes slideInleft {
+    from {
         opacity: 0;
-    transform: translateX(calc(100% + 32px));
+        transform: translateX(calc(100% + 32px));
     }
-    to{
+
+    to {
         opacity: 1;
-    transform: translateX(0);
+        transform: translateX(0);
     }
 }
 
-@keyframes fadeOutToast{
-    to{
+@keyframes fadeOutToast {
+    from{
+        opacity: 1;
+    }
+    to {
         opacity: 0;
     }
 }
-.toast + .toast{
+
+.toast+.toast {
     margin-top: 20px;
 }
+
 .toast__icon,
-.toast__close{
+.toast__close {
     padding: 16px;
 }
-.toast__icon{
+
+.toast__icon {
     font-size: 24px;
 }
-.toast__close{
+
+.toast__close {
     font-size: 20px;
-    color: rgba(0,0,0,0.3);
+    color: rgba(0, 0, 0, 0.3);
 }
-.toast__body{
+
+.toast__body {
     /* chữ có ngắn thì icon close không bị xít gần */
     flex-grow: 1;
 }
-.toast__title{
+
+.toast__title {
     font-size: 16px;
     font-weight: 600;
     color: #333;
 }
-.toast__msg{
+
+.toast__msg {
     font-size: 14px;
     color: #888;
     margin-top: 4px;
 }
-.toast__close{
+
+.toast__close {
     cursor: pointer;
 }
 
-.toast__success{
+.toast__success {
     border-color: #74d571;
 }
 
-.toast__error{
+.toast__error {
     border-color: #ed6c49;
 }
 
-.toast__success .toast__icon{
+.toast__success .toast__icon {
     color: #74d571;
 }
-.toast__error .toast__icon{
+
+.toast__error .toast__icon {
     color: #ed6c49;
 }
 
@@ -123,6 +143,6 @@
 
 
 /* for chat box */
-.chatbox{
+.chatbox {
     max-width: inherit;
 }
