--- a/navigation_css/admin.css
+++ b/navigation_css/admin.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     background-image: url(../img/background/Black\ and\ Red\ Simple\ Fitness\ Zoom\ Workout\ Background.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -6,26 +6,29 @@
     min-height: calc(100vh - 68px);
 }
 
-.container__box{
+.container__box {
     display: flex;
     background-color: rgba(20, 20, 20, 0.94);
 }
-.container__bar{
+
+.container__bar {
     display: flex;
     flex-direction: column;
-    flex: 2.4;
+    flex: 2;
     min-height: calc(100vh - 68px);
     background-color: #fff;
     padding: 0 8px;
+    min-width: 206px;
 }
-.container__bar__list{
+
+.container__bar__list {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.container__bar__item{
+.container__bar__item {
     display: flex;
     align-items: center;
     font-size: 1.8rem;
@@ -40,46 +43,46 @@
 }
 
 /* height: 46px; */
-.container__bar__item:last-child{
+.container__bar__item:last-child {
     margin-bottom: 40px;
 }
 
-.container__bar__item--active{
+.container__bar__item--active {
     border-right: 4px solid rgb(22, 110, 252);
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
 
-.container__bar__item i{
+.container__bar__item i {
     margin-right: 12px;
 }
 
-.container__bar__item__text{
+.container__bar__item__text {
     text-align: center;
     justify-content: center;
     padding-top: 2px;
 }
 
-.container__bar__item--avt{
+.container__bar__item--avt {
     display: flex;
     flex-direction: column;
     background-color: transparent;
 }
 
-.container__bar__item__avt{
-    width:  80px;
+.container__bar__item__avt {
+    width: 80px;
     height: 80px;
     object-fit: cover;
     border-radius: 50%;
     border: 1px solid #333;
 }
 
-.container__bar__item__name{
+.container__bar__item__name {
     font-size: 14px;
     margin: 6px 0;
 }
 
-.container__bar__logout{
+.container__bar__logout {
     flex: 1;
     display: flex;
     align-items: flex-end;
@@ -88,33 +91,41 @@
 
 
 /* container__show */
-.container__show{
+.container__show {
     flex: 12;
 }
+
 /* container__show__head */
-.container__show{
+.container__show {
     /* display: none; */
 }
 
-.container__show__add{
+.container__show__add {
     display: flex;
     align-items: center;
     margin-top: 12px;
 }
-.container__show__add button{
+
+.container__show__add button {
     margin-left: 12px;
-    height: 32px;
+    height: 34px;
     font-size: 14px;
-    padding: 0 6px;
+    font-weight: 600;
+    padding: 5px 6px 2px;
     background-color: #f88900;
+    border-radius: 4px;
+    border: 2px solid #333;
 }
-.container__show__add button:hover{
+
+.container__show__add button:hover {
     background-color: rgb(229, 127, 1);
     cursor: pointer;
 }
+.container__show__add h1{
+    padding-top: 6px;
+}
 
-
-.container__show__head{
+.container__show__head {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -122,14 +133,115 @@
     height: 70px;
 }
 
-.container__show__head__input__box{
+.container__show__head__input__box {
     display: flex;
     flex-direction: column;
     position: relative;
     width: 280px;
 }
 
-.show__find__id__box{
+.container__show__message__box {
+    display: flex;
+}
+
+.list-message-box {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+}
+
+.list-message-box__find{
+    display: flex;
+    align-items: center;
+    border: 1px solid #333;
+    background-color: #fff;
+    margin: 0 2px;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.list-message-box__find i{
+    font-size: 1.4rem;
+    padding:  0 8px;
+    color: #666;
+}
+.list-message-box__find input{
+    flex: 1;
+    font-size: 1.4rem;
+    height: 100%;
+    padding: 8px 0 7px;
+    outline: none;
+    border: 0;
+    text-decoration: center;
+}
+
+.list-message-box__title{
+    font-size: 28px;
+    line-height: 30px;
+    padding: 20px 2px;
+}
+
+.message__user{
+    width: 100%;
+    background-color: #c4c4c448;
+    border: 1px solid #333;
+    margin-top: 4px;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.message__user__box{
+    display: flex;
+    align-items: center;
+}
+.message__user__box__top{
+    display: flex;
+    align-items: center;
+}
+
+.message__user__box img{
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    margin: 4px;
+}
+.message__user__box__right{
+    display: flex;
+    flex-direction: column;
+    padding: 4px 0;
+    flex: 1;
+}
+
+
+.message__user__name{
+    /* margin-top: 3px; */
+    font-size: 16px;
+}
+
+.message__user__msg{
+    display: flex;
+    font-size: 12px;
+}
+.message__user__msg__obj{
+    margin-right: 2px;
+}
+
+.message__user__name__options{
+    font-size: 12px;
+    padding: 8px;
+    cursor: pointer;
+}
+.message__user__name__options:hover{
+    color: #f88900;
+}
+
+.chatbox {
+    flex: 10;
+}
+
+.show__find__id__box {
     position: absolute;
     top: calc(100% + 4px);
     left: 6px;
@@ -137,9 +249,9 @@
     z-index: 10;
 }
 
-.show__find_id{
+.show__find_id {
 
-    height: 34px;  
+    height: 34px;
     display: flex;
     align-items: center;
     background-color: #fff;
@@ -148,10 +260,10 @@
     width: calc(100% - 6px);
     color: #666;
     border-left: 2px solid #ff1010;
-    border-bottom: 3px solid #ff1010; 
+    border-bottom: 3px solid #ff1010;
 }
 
-.show__input__id{
+.show__input__id {
     height: 34px;
     font-size: 16px;
     width: 100%;
@@ -161,13 +273,14 @@
     border: 0px;
 }
 
-.show__input__package{
+.show__input__package {
     height: 34px;
     font-size: 16px;
     margin-right: 12px;
 
 }
-.show__input__date{
+
+.show__input__date {
     height: 34px;
     font-size: 16px;
     padding: 8px 6px 6px;
@@ -175,91 +288,106 @@
     margin-right: 12px;
 }
 
-.head-end{
+.head-end {
     flex: 1;
     display: flex;
     justify-content: flex-end;
 }
 
-.container__show__find__btn{
+.container__show__find__btn {
     display: block;
     width: 90px;
     height: 34px;
     font-size: 16px;
+    font-weight: 600;
     padding: 4px 0 2px;
+    background-color: cornsilk;
+    border-radius: 4px;
+    border: 2px solid #333;
+}
+.container__show__find__btn:hover {
+    background-color: rgb(229, 222, 198);
 }
 
-.container__show__content{
+.container__show__content {
     padding: 0px 6px;
     position: relative;
 }
 
-.table__show{
+.table__show {
     /* position: relative;
     top: 0; */
     /* z-index: -1; */
     border-collapse: collapse;
     width: 100%;
-    
+
     table-layout: fixed;
 }
 
-.tr__show{
+.tr__show {
     height: 32px;
 }
-.th__show:nth-child(1){
+
+.th__show:nth-child(1) {
     width: 110px;
 }
-.tr__show .th__show:last-child{
+
+.tr__show .th__show:last-child {
     width: 100px;
 }
+
 /* .th__show:nth-child(3){
     width: 52px;
 } */
 
-.th__show{
+.th__show {
     font-size: 18px;
     font-weight: 700;
     line-height: 22px;
     padding: 8px 4px;
 }
-.td__show{ 
+
+.td__show {
     font-size: 16px;
     height: 32px;
-    
-  /* white-space: nowrap; */
+
+    /* white-space: nowrap; */
 }
 
-.td__show i{
+.td__show i {
     margin: 0 6px;
     cursor: pointer;
 }
-.td__show i:hover{
+
+.td__show i:hover {
     color: #9e9e9e;
 }
 
-.table__show, .th__show, .td__show {
+.table__show,
+.th__show,
+.td__show {
     border: 1px solid rgb(255, 255, 255);
     text-align: center;
     vertical-align: middle;
 }
 
-.trEdit{
+.trEdit {
     background-color: #333;
 }
 
-.remove-icon{
+.remove-icon {
     display: flex;
     justify-content: flex-end;
     margin: 0px 20px 16px 0;
     font-size: 18px;
 }
-.remove-icon:hover{
+
+.remove-icon:hover {
     cursor: pointer;
     color: #c4c4c4;
 }
 
-.inputAdd{
+.inputAdd {
     display: flex;
     text-align: center;
     width: 100%;
@@ -270,27 +398,36 @@
     background-color: transparent;
     color: #fff;
 }
+
 .inputAdd::placeholder {
     color: white;
 }
 
 
-.save__box{
+.save__box {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
     width: 100%;
 }
-.save__box span{
+
+.save__box span {
     font-size: 14px;
     color: rgb(243, 232, 31);
     margin-right: 22px;
 }
-.save-btn{
+
+.save-btn {
     font-size: 14px;
+    font-weight: 600;
     margin-top: 12px;
     margin-right: 18px;
-    padding: 4px 0 2px;
+    background-color: aquamarine;
+    padding: 8px 8px 4px;
+    border-radius: 4px;
+    border: 2px solid #666;
+    font-size: 1.6rem;
 }
-
-
+.save-btn:hover {
+    background-color: rgb(103, 209, 174);
+}
