--- a/navigation_css/chatbox.css
+++ b/navigation_css/chatbox.css
@@ -1,3 +1,7 @@
+*{
+    /* font-family: montserrat; */
+}
+
 .container--chat {
     display: flex;
     align-items: center;
@@ -12,6 +16,7 @@
     position: relative;
     text-align: center;
     padding: 0 8px;
+    overflow: hidden;
 }
 
 .chatbox {
@@ -21,18 +26,20 @@
     max-width: 1200px;
     width: 100%;
     min-width: 300px;
-    background-color: rgba(187, 187, 187, 0.172);
-    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.4);
+    /* border-radius: 4px; */
     overflow: hidden;
     /* border: 1px solid rgba(214, 214, 214, 0.675); */
-    box-shadow: 2px 2px 8px 2px #3f3f3f;
+    box-shadow: 2px 2px 10px #000000;
+    border-top: 1px rgba(255, 255, 255, 0.05) solid;
 }
 
 .chatbox__head {
     display: flex;
     align-items: center;
-    background-color: #3d3d3d;
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 0 8px;
+    /* border: 1px white solid; */
 }
 
 .chatbox__head__title {
@@ -51,15 +58,18 @@
     content: "";
     width: 8px;
     height: 8px;
-    margin-right: 4px;
-    background-color: #5ad539;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    background-color: #6fff47;
     border-radius: 50%;
 }
 
 .chatbox__head__active__text {
     font-size: 1.2rem;
     font-weight: 700;
-    margin-top: 4px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    font-family: montserrat;
 }
 
 /* chatbox__message */
@@ -93,7 +103,7 @@
 
 
 .chatbox__message__item:not(:first-child) {
-    margin-top: 12px;
+    margin-top: 10px;
 }
 
 .chatbox__message__item__text {
@@ -101,14 +111,16 @@
     align-items: center;
     text-align: left;
     font-size: 1.6rem;
-    font-weight: 600;
+    font-family: montserrat;
     line-height: 2rem;
     width: max-content;
-    max-width: 70%;
-    padding: 12px 12px 8px;
-    background-color: rgba(33, 33, 33, 0.4);
-    border: 1px solid #000;
-    border-radius: 4px;
+    max-width: 650px;
+    padding: 8px 15px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .chatbox__message__item__left {
@@ -119,61 +131,119 @@
 .chatbox__message__item__right {
     display: flex;
     justify-content: flex-end;
-
 }
 
-
-
-
+.chatbox__message__item__right span{
+    display: flex;
+    justify-content: flex-end;
+    background-color: rgb(51, 51, 51);
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
 
 
 /* chatbox__bottom */
 .chatbox__bottom {
     display: flex;
-    flex-direction: column;
-    height: 88px;
-    background-color: #3f3f3f;
-    border-top-right-radius: 8px;
+    align-items: center;
+    /* flex-direction: column; */
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    /* border-top-right-radius: 8px;
     border-top-left-radius: 8px;
     overflow: hidden;
     border-top-width: 2px;
     border-left-width: 0;
     border-right-width: 0;
     border-bottom-width: 0;
-    border-top-color: #f60334;
-    border-style: solid;
+    border-top-color: #ffffff;
+    border-style: solid; */
 }
 
 .chatbox__bottom__link-social {
     display: flex;
+    justify-content: center;
+    width: 86px;
     align-items: center;
     font-size: 1.2rem;
-    padding: 4px 22px;
-    background-color: #303030;
+    /* background-color: #303030; */
+}
+
+a.chatbox__bottom__link-social__mess{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+a.chatbox__bottom__link-social__mess span{
+    color: white;
+    display: flex;
+    position: absolute;
+    bottom: 100px;
+    font-family: montserrat;
+    font-size: 14px;
+    padding: 10px;
+    background-color: goldenrod;
+    border-radius: 20px;
+    left: 10px;
+    width: 150px;
+}
+
+i.bx.bxs-down-arrow{
+    color: goldenrod;
+    font-size: 16px;
+    position: absolute;
+    bottom: 88px;
+    left: 40px;
+}
+
+.sub{
+    display: none;
+    position: absolute;
+    top: 0px;
+    bottom: -31px;
+    right: 70px;
+}
+
+a.chatbox__bottom__link-social__mess:hover .sub{
+    display: block;
+}
+
+.messenger_ico{
+    height: 35px;
+    width: 35px;
 }
 
 .chatbox__bottom__link-social__mess {
     text-decoration: none;
     cursor: pointer;
+    display: flex;
 }
 
 .chatbox__bottom__input {
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    height: 50px;
+    /* justify-content: space-between; */
 }
 
 .chatbox__bottom__input input {
     display: flex;
     flex: 9;
     height: calc(100% - 12px);
-    padding: 0 16px;
-    margin: 0 22px;
+    padding: 0 10px;
+    margin-right: 10px;
     font-size: 1.6rem;
     color: var(--white-color);
-    background-color: #3f3f3f;
-    border-radius: 4px;
+    background-color: transparent;
+    border-radius: 20px;
+    border-color: rgb(150, 150, 150);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     outline: none;
 }
 
@@ -182,16 +252,31 @@
     align-items: center;
     justify-content: center;
     flex: 1;
-    font-size: 2rem;
+    font-size: 3rem;
     height: calc(100% - 12px);
     width: 32px;
-    padding: 0 12px;
+    /* padding: 0 12px; */
     margin-right: 12px;
-    background-color: #5f5f5f62;
+    /* background-color: #5f5f5f62; */
     cursor: pointer;
     border-radius: 4px;
+    color: rgb(180, 180, 180);
 }
 
 .chatbox__bottom__input i:hover {
-    opacity: 0.8;
+    color: white;
+}
+
+@media (max-width: 414px){
+    .chatbox__message__item__text{
+        max-width: 280px;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 320px){
+    .chatbox__message__item__text{
+        max-width: 230px;
+        font-size: 14px;
+    }
 }
