--- a/navigation_css/chatbox.css
+++ b/navigation_css/chatbox.css
@@ -6,6 +6,10 @@ body{
     overflow: hidden;
 }
 
+.container{
+    overflow: hidden;
+}
+
 .container--chat {
     display: flex;
     align-items: center;
